# CrewAI_DK4PM

./: README.md  bash.exe.stackdump  event_log_human_readable.txt
dinsdag/: DK_agent_company.py  DK_agent_process.py  FlowPlot.html.html  Introduction_agent.py  PM_agent.py  PM_agent_tools.py  PoemFlowPlot.html  WriterAgent.py  WriterAgent_test.py  event_log.txt  event_log_actions.py  event_log_human_readable.txt  main_flow.py  prompts.py  pyproject.toml
dinsdag/Agents/: DK_agent_company.py  DK_agent_process.py  Introduction_agent.py  PM_agent.py  WriterAgent.py
dinsdag/Functions_for_agents/: PM_agent_tools.py  event_log_actions.py  prompts.py
dinsdag/Intermediate_results/: event_log_agents.txt
dinsdag/Intermediate_results/Company_DK_agent/: output_0.txt  output_1.txt  output_2.txt  output_3.txt  output_4.txt  output_8.txt
dinsdag/Intermediate_results/Introduction_agent/: output_0.txt  output_1.txt  output_10.txt  output_2.txt  output_3.txt  output_4.txt  output_5.txt  output_7.txt  output_8.txt
dinsdag/Intermediate_results/Process_expert_DK_agent/: output_0.txt  output_1.txt  output_2.txt  output_3.txt  output_4.txt  output_5.txt  output_9.txt
dinsdag/Intermediate_results/Writing_report_agent/: output.md  (+8 more)
dinsdag/Results_storage/: IT-IT-Volvo  IT-IT-Volvo.md  Operational-Travel-Google  audit-O2C  audit-O2C.md  environ-P2P-Walmart  environment-P2P-walmart.md  environmental-P2P-Walmart.md  inefficiencies-AP-GE  inefficiencies-AP-GE.md  operational-Travel-Google.md  operational-travel-google.md  regulatory-loan-Wells
dinsdag/tests/: file_writing_tool_test.py
(+115 files in other folders)
