[project]
name = "dinsdag"
version = "0.1.0"
description = "dinsdag using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.119.0,<1.0.0"
]

[project.scripts]
dinsdag = "dinsdag.main:run"
run_crew = "dinsdag.main:run"
train = "dinsdag.main:train"
replay = "dinsdag.main:replay"
test = "dinsdag.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
